--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -1,5 +1,6 @@
 .devise-flash {
   text-align: center;
+
   .alert-alert,
   .alert-error {
     @extend .alert-danger;
@@ -17,6 +18,7 @@
     text-align: left;
     display: inline-block;
     width: auto;
+
     li {
       font-size: 1.2em;
     }
@@ -106,7 +108,7 @@
 }
 
 #ws-signup-box {
-  box-shadow: 0px 29px 147.5px 102.5px rgba(0, 0, 0, 0.05), 0px 29px 95px;
+  box-shadow: 0 29px 147.5px 102.5px rgba(0, 0, 0, 0.05), 0 29px 95px;
   min-height: 520px !important;
 }
 
@@ -123,11 +125,11 @@
 }
 
 .error {
-  box-shadow: 0 3px 10px rgba(0,0,0,0.23), 0 3px 10px rgba(0,0,0,0.16);
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.23), 0 3px 10px rgba(0, 0, 0, 0.16);
   background-color: lighten(theme-color("danger"), 5);
   border: 1px solid darken(theme-color("danger"), 5);
   text-align: middle;
   font-size: 1.5em;
   padding: 1em;
-  margin: -20px -20px 0px -20px;
+  margin: -20px -20px 0 -20px;
 }
