--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -9,6 +9,7 @@
 
   h4 {
     display: inline-block;
+
     .small-bullet {
       font-size: 1.3em;
     }
@@ -18,6 +19,7 @@
 // Top Navbar
 .app-header {
   @extend .navbar;
+
   height: 50px;
   padding: 0;
   margin: 0;
@@ -68,6 +70,7 @@
 // Alerts
 .flash-messages {
   @media (min-width: 768px) { margin-left: $sidebar-width; }
+
   position: relative;
   top: 50px;
   text-align: center;
@@ -82,11 +85,11 @@
   width: 100%;
 
   .alert {
-    @media(min-width: 768px) { margin-left: -$sidebar-width; }
+    @media (min-width: 768px) { margin-left: -$sidebar-width; }
   }
 
   .alert-warning {
-    margin-bottom: 0px;
+    margin-bottom: 0;
   }
 
   .alert-notice {
@@ -98,8 +101,10 @@
   }
 }
 
-.alert-alert, .alert-notice {
+.alert-alert,
+.alert-notice {
   @extend .alert-success;
+
   text-align: center;
 }
 
@@ -156,7 +161,6 @@ li.nav-second-level {
   }
 }
 
-
 // Footer
 .sidebar-mini {
   margin: 0;
@@ -182,6 +186,7 @@ li.nav-second-level {
 
   .powered-by {
     @extend .pull-right;
+
     margin-right: 2%;
     font-size: 0.8em;
   }
