--- a/app/assets/stylesheets/schedules.scss
+++ b/app/assets/stylesheets/schedules.scss
@@ -157,7 +157,7 @@
       box-shadow: 0 0 1px #2196f3;
     }
 
-    input:checked + .slider:before {
+    input:checked + .slider::before {
       -webkit-transform: translateX(26px);
       -ms-transform: translateX(26px);
       transform: translateX(26px);
@@ -265,6 +265,7 @@
     a[href]::after {
       content: none !important;
     }
-    .no-print { display:none }
+
+    .no-print { display: none; }
   }
 }
