More SCSS style fixups, misc refactors

--- a/app/assets/stylesheets/line-spinner.scss
+++ b/app/assets/stylesheets/line-spinner.scss
@@ -45,7 +45,9 @@
 }
 
 @keyframes sk-stretchdelay {
-  0%, 40%, 100% {
+  0%,
+  40%,
+  100% {
     transform: scaleY(0.4);
     -webkit-transform: scaleY(0.4);
   }
