--- a/app/assets/stylesheets/rsvp.scss
+++ b/app/assets/stylesheets/rsvp.scss
@@ -136,7 +136,7 @@
 
     li {
       font-size: 1.5em;
-      line-spacing: 1.3em;
+      line-height: 1.3;
       margin: 0 1em;
     }
 
@@ -182,7 +182,7 @@
       max-width: 80%;
     }
 
-    .mandatory:after {
+    .mandatory::after {
       content: "*";
       color: red;
     }
@@ -205,7 +205,7 @@
     }
 
     :-moz-placeholder { /* Firefox 18- */
-          font-size: 16px !important;
+      font-size: 16px !important;
     }
 
     .date-titles {
@@ -239,7 +239,7 @@
         color: $errors-text-color;
       }
 
-      input,select {
+      input, select {
         background-color: #e9d5d5;
       }
     }
@@ -340,4 +340,3 @@
     }
   }
 }
-
