--- a/app/assets/stylesheets/rsvp.scss
+++ b/app/assets/stylesheets/rsvp.scss
@@ -239,7 +239,8 @@
         color: $errors-text-color;
       }
 
-      input, select {
+      input,
+      select {
         background-color: #e9d5d5;
       }
     }
