Added yes-online form to RSVP process, for online events [#175491222]

--- a/app/views/rsvp/_mailing_address.html.erb
+++ b/app/views/rsvp/_mailing_address.html.erb
@@ -1,6 +1,7 @@
 <label class="mandatory">Address</label>
 <div class="row">
   <div class='col-md-12'>
+    <p>We collect the mailing address of workshop organizers so that we can mail you a poster calendar.</p>
     <%= p.text_field :address1, class: "form-control", placeholder: 'Address line 1', autocomplete: "address-line1" %>
     <%= p.text_field :address2, class: "form-control", placeholder: 'Address line 2', autocomplete: "address-line2" %>
     <%= p.text_field :address3, class: "form-control", placeholder: 'Address line 3', autocomplete: "address-line3" %>
