Remove hotel details from membership#edit, for online events [#175491222]

--- a/app/views/memberships/_membership_rsvp_form.html.erb
+++ b/app/views/memberships/_membership_rsvp_form.html.erb
@@ -67,7 +67,7 @@
         </div>
       </div>
       <div class="form-inline checkbox-field">
-        <%= f.check_box :guest_disclaimer, class: "form-control", id: "has-guest" %>
+        <%= f.check_box :guest_disclaimer, class: "form-control", id: "guest_disclaimer" %>
         <div class="control-label">
           <%= f.label :guest_disclaimer, "I acknowledge that my guest's meals are not included" %>
         </div>
