--- a/app/views/rsvp/yes.html.erb
+++ b/app/views/rsvp/yes.html.erb
@@ -161,7 +161,7 @@
         </div>
 
         <div class="form-group">
-          <%= p.label :url, 'Website (URL) - use "https://..."' %>
+          <%= p.label :url, 'Your Website (URL)' %>
           <%= p.url_field :url, class: "form-control", autocomplete: "url" %>
         </div>
         <div class="form-group">
