--- a/app/views/rsvp/_validation_errors.html.erb
+++ b/app/views/rsvp/_validation_errors.html.erb
@@ -2,7 +2,7 @@
 <section id="errors">
 <div class="alert alert-danger">
   <header>
-    <h3>Submission Not Successful!</h3>
+    <h3>Error submitting form!</h3>
     <h4>Please correct the following problems:</h4>
   </header>
   <ul>
