--- a/app/views/rsvp/yes-online.html.erb
+++ b/app/views/rsvp/yes-online.html.erb
@@ -40,6 +40,10 @@
           <%= p.text_field :lastname, class: "form-control", placeholder: 'Your family name', autocomplete: "family-name" %>
         </div>
         <div class="form-group">
+          <%= p.label :gender, class: "mandatory" %>
+          <%= p.select :gender, [['Male', 'M'],['Female', 'F'],['Other', 'O']], { include_blank: 'Please select' }, class: "form-control", autocomplete: "sex" %>
+        </div>
+        <div class="form-group">
           <%= p.label :affiliation, class: "mandatory" %>
           <%= p.text_field :affiliation, class: "form-control", placeholder: 'Your primary work institution', autocomplete: "organization" %>
         </div>
