--- a/app/views/rsvp/yes-online.html.erb
+++ b/app/views/rsvp/yes-online.html.erb
@@ -2,9 +2,9 @@
   <div class="card">
     <div class="rsvp-card-title card-header">
       <h1>
-        You will be joining us at:<br />
-        <small><%= @rsvp.event.name %> (<%= @rsvp.event.code %>),
-          <%= @rsvp.event.dates(:long) %></small>
+        <small>Participate Online:</small><br />
+        <%= @rsvp.event.name %> (<%= @rsvp.event.code %>)<br>
+          <small><em><%= @rsvp.event.dates(:long) %></em></small>
       </h1>
     </div>
     <% if @rsvp.errors.any? %>
@@ -70,6 +70,7 @@
 
         <div id="email-options">
           <%= rsvp.fields_for :membership, @rsvp.membership do |m| %>
+          <%= m.hidden_field :role, value: 'Virtual Participant' %>
           <div class="row">
             <div class="form-check">
               <%= m.check_box :share_email, { class: "form-check-input" }, true %>
