--- a/app/views/rsvp/yes.html.erb
+++ b/app/views/rsvp/yes.html.erb
@@ -2,9 +2,8 @@
   <div class="card">
     <div class="rsvp-card-title card-header">
       <h1>
-        You will be joining us at:<br />
-        <small><%= @rsvp.event.name %> (<%= @rsvp.event.code %>),
-          <%= @rsvp.event.dates(:long) %></small>
+        <%= @rsvp.event.name %> (<%= @rsvp.event.code %>)<br>
+          <small><em><%= @rsvp.event.dates(:long) %></em></small>
       </h1>
     </div>
     <% if @rsvp.errors.any? %>
@@ -13,9 +12,43 @@
     </div>
     <% end %>
     <div class="card-body d-flex flex-column justify-content-center">
-      <h2 class="rsvp-section">Please share your plans, then click the green button.<br>
-        <small>You may return any time to update this information.</small>
-      </h2>
+
+      <div class="card online-card">
+        <div class="rsvp-card-subtitle card-header">
+          <h2>Attending Virtually/Online?</h2>
+        </div>
+        <div class="card-body">
+            <div class="d-flex flex-row">
+              <div class="p-2">
+                <%= image_tag("/images/online-meeting.png",
+                               alt: "Online Meeting", size: "75") %>
+              </div>
+              <div class="p-2">
+                <p>If you plan to attend this event online, instead of in-person at
+                <%= GetSetting.location(@rsvp.event.location, 'description') %>,
+                then please click this button to go to the RSVP form for
+                <em>Virtual attendance</em>:</p>
+              </div>
+            </div>
+            <div class="d-flex justify-content-center">
+                <%= link_to('Participate Virtually',
+                        rsvp_yes_online_path(@rsvp.invitation.code),
+                        class: 'btn btn-primary btn-lg') %>
+            </div>
+        </div>
+      </div>
+
+      <hr />
+
+      <div class="card">
+        <div class="rsvp-card-subtitle card-header">
+          <h2>Physical/In-Person Attendance</h2>
+        </div>
+        <div class="card-body">
+          <p>The form below is for people who will be attending in-person. Click the green button at the bottom of the page to confirm attendance.<br><br>
+          You may return any time to update this information.</p>
+        </div>
+      </div>
 
       <%= form_for @rsvp, as: :rsvp,
          url: rsvp_yes_path(@rsvp.invitation.code), method: :post,
