--- a/app/views/memberships/add.html.erb
+++ b/app/views/memberships/add.html.erb
@@ -56,6 +56,7 @@
           <ul id="about-roles-list">
             <li>"<strong>Organizers</strong>" have special access to see all added members (including non-invited and declined ones), edit data, send invitations, and add new members.</li>
             <li>"<strong>Participants</strong>" are people you plan to invite to participate in your workshop. Once invited, they can see only other invited members, the workshop description and schedule, and can only edit their own data.</li>
+            <li>"<strong>Virtual Participants</strong>" are the same as Participants, only they are not physically joining the workshop, they are participating via Zoom.</li>
             <li>"<strong>Backup Participants</strong>" are people who you plan to invite if regular Participants decline your invitation, or cancel. Sending an invitation to a Backup Participant automatically changes their role to Participant.</li>
             <li>"<strong>Observers</strong>" are people who are willing to attend the workshop without funding. They will pay for their own food and accommodation.</li>
           </ul>
