--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -31,7 +31,7 @@
           </tr>
           <tr>
             <td class="label">Event Format:</td>
-            <td colspan="3"><%= @event.format %></td>
+            <td colspan="3"><%= @event.event_format %></td>
           </tr>
           <tr>
             <td class="label">Subject Areas:</td>
