Icons for virtual participants, organizers, backup participants [#176722373]

--- a/app/assets/stylesheets/memberships.scss
+++ b/app/assets/stylesheets/memberships.scss
@@ -22,6 +22,10 @@
       margin: -8px;
     }
 
+    .organizer, .contact-organizer {
+      font-weight: bold;
+    }
+
     .observer {
       a {
         color: $secondary-text-color;
@@ -92,6 +96,10 @@
           white-space: normal;
           word-wrap: normal;
           float: left;
+
+          i.fa {
+            color: $secondary-text-color;
+          }
         }
 
         .reply-by-date {
