Invitation email templates for Virtual Participants to Hybrid meetings. [#176722373]

--- a/app/views/invitation_mailer/EO/Virtual 5 Day Workshop-Not Yet Invited.text.erb
+++ b/app/views/invitation_mailer/EO/Virtual 5 Day Workshop-Not Yet Invited.text.erb
@@ -1,6 +1,6 @@
 Dear <%= @person.dear_name %>,
 
-You are invited to attend the following online event:
+You are invited to attend the following event, online:
 
 Workshop: <%= @event.name %> (<%= @event.code %>)
 On: <%= @event.dates(:long) %>
