--- a/app/views/layouts/_flashes.erb
+++ b/app/views/layouts/_flashes.erb
@@ -1,3 +1,5 @@
 <% flash.each do |key, value| %>
-  <%= content_tag(:div, value.html_safe, class: "alert alert-#{key}", role: "alert") %>
+  <% unless value.blank? %>
+    <%= content_tag(:div, value.html_safe, class: "alert alert-#{key}", role: "alert") %>
+  <% end %>
 <% end %>
