Misc. bugfixes and tweaks:
* Send lectures API errors to logs
* Administrate template: store event_formats in array first
* SyncMembers overbooked report update for Online events
* Schedule item cut-off, End events at end of day not 5pm
* Fix typo on RSVP reply-by date info
* Online RSVP form - don't change organizer roles to Virtual Participant

--- a/app/views/memberships/invite.html.erb
+++ b/app/views/memberships/invite.html.erb
@@ -77,7 +77,7 @@
         <h3 class="modal-title" id="about-roles-title">About the Reply-by Date</h3>
       </div>
       <div class="modal-body">
-        <p>Inivations and reminders include a date that we ask participants to answer by. It is set automatically according to the following criteria:</p>
+        <p>Invitations and reminders include a date that we ask participants to answer by. It is set automatically according to the following criteria:</p>
         <ul>
           <li>If the event is more than 3 months, 5 days from now, the deadline is 4 weeks from now.</li>
           <li>If the event is <strong>less</strong> than 3 months, 5 days from now, the deadline is 21 days from now.</li>
