Membership RSVP form should use helper method, in case of empty settings [bugfix]

--- a/app/views/memberships/_membership_rsvp_form.html.erb
+++ b/app/views/memberships/_membership_rsvp_form.html.erb
@@ -79,7 +79,7 @@
       <div class="p-2">
         <h2 class="rsvp-section midpage">Special Considerations</h2>
         <p class="description">
-          <%= GetSetting.rsvp_special_intro(@event.location).html_safe %>
+          <%= rsvp_setting('rsvp_special_intro', @event.location) %>
         </p>
       </div>
       <div class="p-2 form-group">
